# Indus

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: config.rs  configs.rs  fragment.rs  gamma.rs  gibbs.rs  hmm.rs  lib.rs  links.rs  main.rs  model.rs  multimodal.rs  neighbor.rs  quantify.rs  record.rs  records.rs  spatial.rs  transform.rs  unify.rs
test/: olaps.tsv
test/pivot/: barcodes.tsv  genes.tsv  matrix.mtx
test/sec/: genes.tsv  matrix.mtx
