[package]
name = "indus"
version = "0.1.0"
authors = ["Avi Srivastava <asrivastava@cs.stonybrook.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
clap = "2.33.3"
pretty_env_logger = "0.4.0"

[dependencies.carina]
git = "https://github.com/parazodiac/Carina"
branch = "main"
