[package]
name = "indus"
version = "0.1.0"
authors = ["Avi Srivastava <asrivastava@cs.stonybrook.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.5"
log = "0.4.11"
rand = "0.7.3"
clap = "2.33.3"
crossbeam = "0.8.0"
indicatif = "0.15.0"
pretty_env_logger = "0.4.0"

[dependencies.carina]
git = "https://github.com/parazodiac/Carina"
branch = "main"

[dependencies.sce]
git = "https://github.com/parazodiac/SingleCellExperiment"

[lib]
name = "indus"
path = "src/lib.rs"

[[bin]]
name = "indus"
path = "src/main.rs"